# simdsseavx

./: .gitmodules  CMakeLists.txt  README.md
buildutils/: CMakeExecutableTemplate.txt  CMakeLibraryTemplate.txt  CMakeSharedLibraryTemplate.txt  CMakeUtils.txt  FAQ_GIT.txt  check.sh
buildutils/scripts/: asr_testcfg.py  copyright.txt  copyrightPy.txt  cpr.sh  wo_testcfg.py
libsimd/src/: simdavx.cpp  simdavx.h  simdbase.h  simdcpuid.cpp  simdcpuid.h  simdsse.cpp  simdsse.h
libsimd/test/: CMakeLists.txt  simd_runtime.cpp  simd_test.cpp
libtestutils/src/: CMakeLists.txt  simpletimer.h  tutils.h
src/: simdavx.cpp  simdavx.h  simdcpuid.cpp  simdsse.cpp  simdsse.h
test/: simdsse_test.cpp
